Changed the size of the canvas

--- a/weekOne/canvasBlank.html
+++ b/weekOne/canvasBlank.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <canvas id="canvasOne"></canvas>
+    <canvas id="canvasOne" width="500px" height="500px"></canvas>
 
     <script type="text/javascript">
 		// Gets a handle to the element with id canvasOne.
