--- a/weekOne/canvasBlank.html
+++ b/weekOne/canvasBlank.html
@@ -19,13 +19,11 @@
     <canvas id="canvasOne" width="500px" height="500px"></canvas>
 
     <script type="text/javascript">
-		// Gets a handle to the element with id canvasOne.
-		
-		// Set the canvas up for drawing in 2D.
-		
-		// Set the fill colour to bright red.
-		
-		// Create a filled rectangle 
+    const canvas = document.getElementById("canvasOne");
+    const ctx = canvas.getContext("2d");
+
+    ctx.font = "50px Comic Sans MS";
+    ctx.fillText("Karol Uciecha",10,80);
 		
 	  
 		
