Added red rectangle with blue stroke

--- a/weekOne/canvasBlank.html
+++ b/weekOne/canvasBlank.html
@@ -24,6 +24,15 @@
 
     ctx.font = "50px Comic Sans MS";
     ctx.fillText("Karol Uciecha",10,80);
+
+    ctx.fillStyle = "red";
+    ctx.fillRect(150, 150, 150, 100);
+
+    ctx.beginPath();
+    ctx.lineWidth = "4";
+    ctx.strokeStyle = "rgb(0, 0, 255)";
+    ctx.rect(150, 150, 151, 100);
+    ctx.stroke();
 		
 	  
 		
