--- a/weekOne/canvasBlank.html
+++ b/weekOne/canvasBlank.html
@@ -33,8 +33,16 @@
     ctx.strokeStyle = "rgb(0, 0, 255)";
     ctx.rect(150, 150, 151, 100);
     ctx.stroke();
+    ctx.closePath();
 		
-	  
+    ctx.beginPath();
+    ctx.lineWidth = "5";
+    ctx.strokeStyle = "green";
+	  ctx.moveTo(298,300);
+    ctx.lineTo(340,370);
+    ctx.lineTo(260,370);
+    ctx.lineTo(300,300);
+    ctx.stroke();
 		
     </script>
 
