--- a/weekOne/canvasBlank.html
+++ b/weekOne/canvasBlank.html
@@ -29,19 +29,19 @@
     ctx.fillRect(150, 150, 150, 100);
 
     ctx.beginPath();
-    ctx.lineWidth = "4";
-    ctx.strokeStyle = "rgb(0, 0, 255)";
-    ctx.rect(150, 150, 151, 100);
+    ctx.lineWidth = "6";
+    ctx.strokeStyle = "rgba(0, 0, 255, 0.4)";
+    ctx.rect(148, 148, 154, 104);
     ctx.stroke();
     ctx.closePath();
 		
     ctx.beginPath();
     ctx.lineWidth = "5";
-    ctx.strokeStyle = "green";
-	  ctx.moveTo(298,300);
-    ctx.lineTo(340,370);
-    ctx.lineTo(260,370);
-    ctx.lineTo(300,300);
+    ctx.strokeStyle = "rgba(0, 255, 0 , 0.4)";
+	  ctx.moveTo(198,200);
+    ctx.lineTo(240,270);
+    ctx.lineTo(160,270);
+    ctx.lineTo(200,200);
     ctx.stroke();
 		
     </script>
