Added starter weekTwo files + Name in ball.html

--- a/weekOne/shapes.html
+++ b/weekOne/shapes.html
@@ -7,7 +7,7 @@
     <title>Canvas</title>
 
     <style type="text/css">
-		<!-- Adding border to the canvas -->
+		  /* Adding border to the canvas */
       canvas {
         border: 1px solid black;
       }
@@ -22,93 +22,93 @@
 
     <script type="text/javascript">
 
-		// Defining canvas and pen variables
-    const canvas = document.getElementById("canvasOne");
-    const ctx = canvas.getContext("2d");
+      // Defining canvas and pen variables
+      const canvas = document.getElementById("canvasOne");
+      const ctx = canvas.getContext("2d");
 
-		// Adding name to the canvas
-    ctx.font = "50px Comic Sans MS";
-    ctx.fillText("Karol Uciecha",10,80);
+      // Adding name to the canvas
+      ctx.font = "50px Comic Sans MS";
+      ctx.fillText("Karol Uciecha",10,80);
 
-		// Adding filled rectangle to the canvas
-    ctx.fillStyle = "red";
-    ctx.fillRect(150, 150, 150, 100);
+      // Adding filled rectangle to the canvas
+      ctx.fillStyle = "red";
+      ctx.fillRect(150, 150, 150, 100);
 
-		// Adding empty rectangle to the canvas
-    ctx.beginPath();
-    ctx.lineWidth = "6";
-    ctx.strokeStyle = "rgba(0, 0, 255, 0.4)";
-    ctx.rect(148, 148, 154, 104);
-    ctx.stroke();
+      // Adding empty rectangle to the canvas
+      ctx.beginPath();
+      ctx.lineWidth = "6";
+      ctx.strokeStyle = "rgba(0, 0, 255, 0.4)";
+      ctx.rect(148, 148, 154, 104);
+      ctx.stroke();
 
-		// Adding triangle to the canvas
-    ctx.beginPath();
-    ctx.lineWidth = "5";
-    ctx.strokeStyle = "rgba(0, 255, 0 , 0.4)";
-	  ctx.moveTo(200,200);
-    ctx.lineTo(240,270);
-    ctx.lineTo(160,270);
-    ctx.closePath();
-    ctx.fillStyle = "rgba(200, 0, 175, 0.25)";
-    ctx.fill();
-    ctx.stroke();
+      // Adding triangle to the canvas
+      ctx.beginPath();
+      ctx.lineWidth = "5";
+      ctx.strokeStyle = "rgba(0, 255, 0 , 0.4)";
+      ctx.moveTo(200,200);
+      ctx.lineTo(240,270);
+      ctx.lineTo(160,270);
+      ctx.closePath();
+      ctx.fillStyle = "rgba(200, 0, 175, 0.25)";
+      ctx.fill();
+      ctx.stroke();
 
-		// Adding circles to the canvas
-    ctx.beginPath();
-    ctx.lineWidth = "33";
-    ctx.strokeStyle = "rgba(100, 200, 200 , 0.5)";
-		// ctx.arc(positionX, positionY, radius, start angle, end angle, (false/true) draw directrion);
-    ctx.arc(150, 150, 40, 0, 2 * Math.PI);
-    ctx.fillStyle = "rgba(255, 150, 0, 0.75)";
-    ctx.fill();
-    ctx.stroke();
+      // Adding circles to the canvas
+      ctx.beginPath();
+      ctx.lineWidth = "33";
+      ctx.strokeStyle = "rgba(100, 200, 200 , 0.5)";
+      // ctx.arc(positionX, positionY, radius, start angle, end angle, (false/true) draw directrion);
+      ctx.arc(150, 150, 40, 0, 2 * Math.PI);
+      ctx.fillStyle = "rgba(255, 150, 0, 0.75)";
+      ctx.fill();
+      ctx.stroke();
 
-    ctx.beginPath();
-    ctx.lineWidth = "22";
-    ctx.strokeStyle = "rgba(100, 0, 150 , 0.7)";
-    ctx.arc(300, 150, 40, 0, 2 * Math.PI);
-    ctx.stroke();
+      ctx.beginPath();
+      ctx.lineWidth = "22";
+      ctx.strokeStyle = "rgba(100, 0, 150 , 0.7)";
+      ctx.arc(300, 150, 40, 0, 2 * Math.PI);
+      ctx.stroke();
 
-    ctx.beginPath();
-    ctx.arc(300, 150, 30, 0, 2 * Math.PI);
-    ctx.fillStyle = "rgba(255, 165, 0, 0.5)";
-    ctx.fill();
+      ctx.beginPath();
+      ctx.arc(300, 150, 30, 0, 2 * Math.PI);
+      ctx.fillStyle = "rgba(255, 165, 0, 0.5)";
+      ctx.fill();
 
-    // Adding triangle in a rectangle to the canvas
-    ctx.beginPath();
-    ctx.lineWidth = "1";
-    ctx.strokeStyle = "black";
-    ctx.rect(300, 300, 150, 150);
-    ctx.stroke();
+      // Adding triangle in a rectangle to the canvas
+      ctx.beginPath();
+      ctx.lineWidth = "1";
+      ctx.strokeStyle = "black";
+      ctx.rect(300, 300, 150, 150);
+      ctx.stroke();
 
-    ctx.beginPath();
-    ctx.moveTo(375, 300);
-    ctx.lineTo(450,375);
-    ctx.lineTo(300,375);
-    ctx.closePath();
-    ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(375, 300);
+      ctx.lineTo(450,375);
+      ctx.lineTo(300,375);
+      ctx.closePath();
+      ctx.stroke();
 
-    // Adding pacman facing right to the canvas
-    ctx.beginPath();
-    ctx.arc(60, 400, 50, (11 * Math.PI) / 6, (1 * Math.PI) / 6, true);
-  
-    ctx.moveTo(60, 400);
-    ctx.lineTo(50 * Math.cos(11 / 6 * Math.PI) + 60, 50 * Math.sin((1 * Math.PI) / 6) + 400);
+      // Adding pacman facing right to the canvas
+      ctx.beginPath();
+      ctx.arc(60, 400, 50, (11 * Math.PI) / 6, (1 * Math.PI) / 6, true);
+    
+      ctx.moveTo(60, 400);
+      ctx.lineTo(50 * Math.cos(11 / 6 * Math.PI) + 60, 50 * Math.sin((1 * Math.PI) / 6) + 400);
 
-    ctx.moveTo(60, 400);
-    ctx.lineTo(50 * Math.cos(1 / 6 * Math.PI) + 60, 50 * Math.sin((11 * Math.PI) / 6) + 400);
-    ctx.stroke();
+      ctx.moveTo(60, 400);
+      ctx.lineTo(50 * Math.cos(1 / 6 * Math.PI) + 60, 50 * Math.sin((11 * Math.PI) / 6) + 400);
+      ctx.stroke();
 
-    // Adding pacman facing upwards to the canvas
-    ctx.beginPath();
-    ctx.arc(160, 400, 50, (7 * Math.PI) / 4, (5 * Math.PI) / 4, false);
-  
-    ctx.moveTo(160, 400);
-    ctx.lineTo(50 * Math.cos(5 / 4 * Math.PI) + 160, 50 * Math.sin((5 * Math.PI) / 4) + 400);
+      // Adding pacman facing upwards to the canvas
+      ctx.beginPath();
+      ctx.arc(160, 400, 50, (7 * Math.PI) / 4, (5 * Math.PI) / 4, false);
+    
+      ctx.moveTo(160, 400);
+      ctx.lineTo(50 * Math.cos(5 / 4 * Math.PI) + 160, 50 * Math.sin((5 * Math.PI) / 4) + 400);
 
-    ctx.moveTo(160, 400);
-    ctx.lineTo(50 * Math.cos(7 / 4 * Math.PI) + 160, 50 * Math.sin((7 * Math.PI) / 4) + 400);
-    ctx.stroke();
+      ctx.moveTo(160, 400);
+      ctx.lineTo(50 * Math.cos(7 / 4 * Math.PI) + 160, 50 * Math.sin((7 * Math.PI) / 4) + 400);
+      ctx.stroke();
 
     </script>
 
