--- a/weekTwo/ball.html
+++ b/weekTwo/ball.html
@@ -152,15 +152,16 @@
 
         // Function to randomly resize ball
         resize() {
-          this.radius = Math.floor(Math.random() * 50);
+          this.radius = 5 + Math.floor(Math.random() * 45);
         }
       }
 
       class PacMan {
-        constructor(xPosition, yPosition, radius, xSpeed, ySpeed, xBounceSpeed = 1, yBounceSpeed = 1) {
+        constructor(xPosition, yPosition, radius, rotation, xSpeed, ySpeed, xBounceSpeed = 1, yBounceSpeed = 1) {
           this.xPosition = xPosition;
           this.yPosition = yPosition;
           this.radius = radius;
+          this.rotation = rotation;
           this.xSpeed = xSpeed;
           this.ySpeed = ySpeed;
           this.xBounceSpeed = xBounceSpeed;
@@ -170,12 +171,17 @@
         // Function to draw the PacMan on the canvas
         draw() {
           ctx.beginPath();
-          ctx.arc(this.xPosition, this.yPosition, this.radius, (11 * Math.PI) / 6, (1 * Math.PI) / 6, true);
+          ctx.arc(
+            this.xPosition, this.yPosition, this.radius, ((11 * Math.PI) / 6) - this.rotation, ((1 * Math.PI) / 6) - this.rotation, true);
           ctx.moveTo(this.xPosition, this.yPosition);
-          ctx.lineTo(this.radius * Math.cos(11 / 6 * Math.PI) + this.xPosition, this.radius * Math.sin((1 * Math.PI) / 6) + this.yPosition);
+          ctx.lineTo(
+          (this.radius * Math.cos((11 / 6 * Math.PI) - this.rotation)) + this.xPosition,
+          (this.radius * Math.sin(((11 * Math.PI) / 6) - this.rotation)) + this.yPosition);
 
           ctx.moveTo(this.xPosition, this.yPosition);
-          ctx.lineTo(this.radius * Math.cos(1 / 6 * Math.PI) + this.xPosition, this.radius * Math.sin((11 * Math.PI) / 6) + this.yPosition);
+          ctx.lineTo(
+            this.radius * Math.cos((1 / 6 * Math.PI) - this.rotation) + this.xPosition,
+            this.radius * Math.sin(((1 * Math.PI) / 6) - this.rotation) + this.yPosition);
           ctx.stroke();
         }
 
@@ -186,8 +192,10 @@
 
           // Bounce off bottom edge
           if (this.yPosition >= canvasHeight - this.radius) {
-            // Resizing ball randomly
+            // Resize and rotate ball randomly
             pacman.resize();
+            pacman.rotate();
+
             // Prevent ball being stuck slightly out of canvas
             this.yPosition = canvasHeight - this.radius;
             // Reverse the direction
@@ -197,6 +205,7 @@
           // Bounce off the top edge
           if (this.yPosition <= this.radius) {
             pacman.resize();
+            pacman.rotate();
             this.yPosition = this.radius;
             this.ySpeed *= this.yBounceSpeed;
           }
@@ -204,6 +213,8 @@
           // Bounce off right edge
           if (this.xPosition >= canvasWidth - this.radius) {
             pacman.resize();
+            pacman.rotate();
+
             this.xPosition = canvasWidth - this.radius;
             this.xSpeed *= this.xBounceSpeed;
             
@@ -212,6 +223,8 @@
           // Bounce off the left edge
           if (this.xPosition <= this.radius) {
             ball.resize();
+            pacman.rotate();
+
             this.xPosition = this.radius;
             this.xSpeed *= this.xBounceSpeed;
           }
@@ -219,7 +232,11 @@
 
         // Function to randomly resize ball
         resize() {
-          this.radius = Math.floor(Math.random() * 50);
+        this.radius = 5 + Math.floor(Math.random() * 45);
+        }
+
+        rotate() {
+         this.rotation = Math.floor(Math.random() * 10);
         }
       }
 
@@ -227,7 +244,7 @@
       const ball = new Ball(50, 10, 5, 5, 10, -1 * Math.random(), -1 * Math.random(), Math.random());
 
       // Create a new PacMan instance
-      const pacman = new PacMan(200, 200, 20, 5, 10, -1 * Math.random(), -1 * Math.random(), Math.random());
+      const pacman = new PacMan(200, 200, 20, 0, 5, 10, -1 * Math.random(), -1 * Math.random(), Math.random());
 
       function repeatme() {
         ctx.clearRect(0, 0, canvasWidth, canvasHeight);
