--- a/weekFour/paddle.html
+++ b/weekFour/paddle.html
@@ -21,7 +21,7 @@
   <body>
     <h1>Karol Uciecha: G00436758</h1>
     <canvas id="canvas" width="500" height="500"></canvas>
-
+    <h1 id="touchdown"></h1>
     <script type="text/javascript">
       // Canvas dimensions
       const canvasHeight = 500;
@@ -31,152 +31,78 @@
       let canvas = document.getElementById("canvas");
       let ctx = canvas.getContext("2d");
 
-      // ---------------- BALL CLASS ----------------
-      class Ball {
-        constructor(xPosition, yPosition, radius, xSpeed, ySpeed, xBounceSpeed = 1, yBounceSpeed = 1) {
+      // ---------------- MATCHBALL CLASS ----------------
+      class MatchBall {
+        constructor(xPosition, yPosition, radius, xSpeed, ySpeed, rSpeed, gravity = 0.5, friction = 0.99, rotationFriction = 0.99) {
           this.xPosition = xPosition;
           this.yPosition = yPosition;
           this.radius = radius;
           this.xSpeed = xSpeed;
           this.ySpeed = ySpeed;
-          this.xBounceSpeed = xBounceSpeed;
-          this.yBounceSpeed = yBounceSpeed;
+          this.rSpeed = rSpeed;
+          this.gravity = gravity;
+          this.friction = friction;
+          this.rotationFriction = rotationFriction;
         }
 
-        // Draw the ball (circle outline)
+        // Draw the MatchBall (circle outline)
         draw() {
           ctx.beginPath();
+          ctx.fillStyle = "blue";
           ctx.arc(this.xPosition, this.yPosition, this.radius, 0, 2 * Math.PI);
-          ctx.stroke();
+          ctx.fill();
         }
 
-        // Move the ball and check for wall collisions
+        // Move the MatchBall and check for wall collisions
         move() {
+          this.ySpeed += this.gravity;
+          this.xSpeed *= this.friction;
+          this.rSpeed *= this.rotationFriction;
+
           this.xPosition += this.xSpeed;
           this.yPosition += this.ySpeed;
 
           // Bounce off bottom
           if (this.yPosition >= canvasHeight - this.radius) {
             this.yPosition = canvasHeight - this.radius;
-            this.ySpeed *= this.yBounceSpeed;
+            this.ySpeed *= -(this.friction);
+            this.rSpeed *= -(this.rotationFriction); 
           }
 
           // Bounce off top
           if (this.yPosition <= this.radius) {
             this.yPosition = this.radius;
-            this.ySpeed *= this.yBounceSpeed;
+            this.ySpeed *= -(this.friction);
+            this.rSpeed *= -(this.rotationFriction);
           }
 
           // Bounce off right
           if (this.xPosition >= canvasWidth - this.radius) {
             this.xPosition = canvasWidth - this.radius;
-            this.xSpeed *= this.xBounceSpeed;
+            this.xSpeed *= -(this.friction);
+            this.rSpeed *= -(this.rotationFriction); 
           }
 
           // Bounce off left
           if (this.xPosition <= this.radius) {
             this.xPosition = this.radius;
-            this.xSpeed *= this.xBounceSpeed;
-          }
-        }
-      }
-
-      // ---------------- PACMAN CLASS ----------------
-      class PacMan {
-        constructor(xPosition, yPosition, radius, rotation, xSpeed, ySpeed, rotationSpeed = 1) {
-          this.xPosition = xPosition;
-          this.yPosition = yPosition;
-          this.radius = radius;
-          this.rotation = rotation; // mouth rotation
-          this.xSpeed = xSpeed;
-          this.ySpeed = ySpeed;
-          this.rotationSpeed = rotationSpeed; // controls mouth rotation speed
-        }
-
-        // Draw PacMan with open mouth
-        draw() {
-          ctx.beginPath();
-          ctx.arc(
-            this.xPosition,
-            this.yPosition,
-            this.radius,
-            ((11 * Math.PI) / 6) - this.rotation, // mouth start
-            ((1 * Math.PI) / 6) - this.rotation,  // mouth end
-            true
-          );
-
-          // Draw mouth (two lines)
-          ctx.moveTo(this.xPosition, this.yPosition);
-          ctx.lineTo(
-            this.radius * Math.cos((11 / 6 * Math.PI) - this.rotation) + this.xPosition,
-            this.radius * Math.sin((11 / 6 * Math.PI) - this.rotation) + this.yPosition
-          );
-
-          ctx.moveTo(this.xPosition, this.yPosition);
-          ctx.lineTo(
-            this.radius * Math.cos((1 / 6 * Math.PI) - this.rotation) + this.xPosition,
-            this.radius * Math.sin((1 / 6 * Math.PI) - this.rotation) + this.yPosition
-          );
-
-          ctx.stroke();
-        }
-
-        // Move PacMan and check wall collisions
-        move() {
-          const gravity = 0.5;
-          const friction = 0.99;
-          const rotationFriction = 0.99;
-
-          // Apply gravity, friction, and rotation friction
-          this.ySpeed += gravity;
-          this.xSpeed *= friction;
-          this.rotationSpeed *= rotationFriction;
-
-          this.xPosition += this.xSpeed;
-          this.yPosition += this.ySpeed;
-
-          // Bounce bottom
-          if (this.yPosition >= canvasHeight - this.radius) {
-            this.yPosition = canvasHeight - this.radius;
-            this.ySpeed *= -0.9;  // Lose energy, bounce to 90% height
-            this.rotationSpeed *= -1; // flip rotation
-          }
-
-          // Bounce top
-          if (this.yPosition <= this.radius) {
-            this.yPosition = this.radius;
-            this.ySpeed *= -0.9;
-            this.rotationSpeed *= -1;
-          }
-
-          // Bounce right
-          if (this.xPosition >= canvasWidth - this.radius) {
-            this.xPosition = canvasWidth - this.radius;
-            this.xSpeed *= -1;
-            this.rotationSpeed *= -1;
-          }
-
-          // Bounce left
-          if (this.xPosition <= this.radius) {
-            this.xPosition = this.radius;
-            this.xSpeed *= -1;
-            this.rotationSpeed *= -1;
+            this.xSpeed *= -(this.friction);
+            this.rSpeed *= -(this.rotationFriction); 
           }
 
           // Stop very slow movements
           if (Math.abs(this.xSpeed) < 0.01) this.xSpeed = 0;
           if (Math.abs(this.ySpeed) < 0.01) this.ySpeed = 0;
-          if (Math.abs(this.rotationSpeed) < 0.01) this.rotationSpeed = 0;
+          if (Math.abs(this.rSpeed) < 0.01) this.rSpeed = 0;
 
           this.rotate();
         }
 
-        // Rotate PacMan
+        // Rotate MatchBall
         rotate(acceleration = 0) {
-          if (acceleration > 0) this.rotationSpeed *= 1.1;
-          else if (acceleration < 0) this.rotationSpeed *= 0.9;
-          
-          this.rotation += this.rotationSpeed * 0.05;
+          if (acceleration > 0) this.rSpeed *= 1.1;
+          else if (acceleration < 0) this.rSpeed *= 0.9;
+          this.rotation += this.rSpeed * 0.05;
       }
     }
 
@@ -218,8 +144,7 @@
       }
 
       // ---------------- CREATE OBJECTS ----------------
-      const ball = new Ball(50, 10, 5, 5, 10, -1 * Math.random(), -1 * Math.random());
-      const pacman = new PacMan(200, 200, 30, 0, 5, 10, 5);
+      const ball = new MatchBall(50, 100, 10, 10 * Math.random(), 10 * Math.random(), 10 * Math.random());
       const paddleRight = new PaddleBall(true);
       const paddleLeft = new PaddleBall(false);
 
@@ -231,14 +156,22 @@
 
         // Draw + Move objects
         ball.draw();
-        pacman.draw();
         ball.move();
-        pacman.move();
         paddleRight.draw();
         paddleLeft.draw();
 
+        collisionDetection();
+
         // Loop animation
         window.requestAnimationFrame(repeatme);
+      }
+
+      function collisionDetection() {
+        var distanceRight = Math.sqrt(Math.pow((paddleRight.xPosition + paddleRight.radius) - (ball.xPosition + ball.radius), 2) + Math.pow((paddleRight.yPosition + paddleRight.radius) - (ball.yPosition + ball.radius), 2));
+        var distanceLeft =  Math.sqrt(Math.pow((paddleLeft.xPosition + paddleLeft.radius) - (ball.xPosition + ball.radius), 2) + Math.pow((paddleLeft.yPosition + paddleLeft.radius) - (ball.yPosition + ball.radius), 2));
+        console.log(distanceRight + ", " + distanceLeft);
+        if (distanceLeft == 0) {}
+        else if (distanceRight == 0) {}
       }
 
       //keypresses with jQuery
